--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "ng2-carouselamos": "^3.2.0",
     "rxjs": "^6.0.0",
+    "save": "^2.3.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
